Setup add for Heroku

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "node src/app.js"
+    "start": "node src/app.js"
   },
   "repository": {
     "type": "git",
