--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express": "^4.17.1",
     "hbs": "^4.1.1",
     "nodemon": "^2.0.3",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {},
   "scripts": {
